Repair scrollbar in IE

--- a/style/style.css
+++ b/style/style.css
@@ -17,6 +17,7 @@ html {
 	color:#444;
 	font-size:105%;
 	overflow-y:scroll;
+	-ms-overflow-style:scrollbar;
 }
 
 /* Font styling */
